--- a/client/src/App.css
+++ b/client/src/App.css
@@ -100,6 +100,18 @@ img#logo {
   background-color: orange;
 }
 
+/*
+.task-card.today > .task-body {
+  border-right: solid 10px;
+  border-bottom-right-radius: 10px;
+  border-color: rgb(80, 0, 0);
+}
+
+.task-card.today > div {
+  padding-left: 10px;
+}
+*/
+
 .task-card .edit {
   background-color: rgba(255, 255, 255, 0.2);
   padding: 10px;
@@ -126,6 +138,12 @@ img#logo {
 
 .tasklist {
   margin: 0 calc(max(50vw - 20em, 10px));
+}
+
+.today-separator {
+  height: 2px;
+  background-image: linear-gradient(90deg, #000 25%, #0000 25%, #0000 50%, #000 50%, #000 75%, #0000 75%, #0000 100%);
+  background-size: 19%;
 }
 
 label {
