--- a/client/src/App.css
+++ b/client/src/App.css
@@ -337,6 +337,19 @@ label {
   left: 0;
 }
 
+.add-section {
+  background-color: rgb(218, 218, 218);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.add-section:hover {
+  background-color: rgb(182, 182, 182);
+}
+
 /*
 button {
   background: hsl(120, 100%, 20%);
