--- a/client/src/App.css
+++ b/client/src/App.css
@@ -439,6 +439,24 @@ label {
   background-color: rgb(182, 182, 182);
 }
 
+.toast-container {
+  position: absolute;
+  right: 0;
+  z-index: 200;
+}
+
+.toast {
+  background-color: red;
+  margin: 5px;
+  padding: 5px;
+  border-radius: 5px;
+  width: 200px;
+}
+
+.toast.info {
+  background-color: blue;
+}
+
 /*
 button {
   background: hsl(120, 100%, 20%);
