--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,282 +30,18 @@ body {
   background-color: ghostwhite;
 }
 
-/*
-.content {
-  margin-top: calc(1cm + 30px);
-}
-*/
-
-.bar {
-  background-color: #2f4f4f;
-  display: flex;
-  justify-content: right;
-  align-items: center;
-}
-
-/*
-.bar {
-  background-color: #2f4f4f;
-  display: flex;
-  justify-content: right;
-  align-items: center;
-  position: relative;
-  position: fixed;
-  width: 100%;
-  top: -5px;
-  padding-top: 5px;
-  z-index: 2;
-}
-*/
-
-.bar>div {
-  color: lightgray;
-  margin: 10px;
-}
-
-.bar a {
-  color: lightgray;
-  font-weight: bolder;
-  text-decoration: none;
-}
-
-div#logo {
-  flex-grow: 1;
-}
-
-img#logo {
-  height: 1cm;
-
-}
-
-
-.task-card {
-  margin: 10px;
-  background-color: skyblue;
-  border-radius: 10px;
-  box-shadow: 5px 5px 10px rgb(102, 102, 102);
-
-}
-
-.task-card.idle {
-  background-color: var(--idle-color);
-}
-
-.task-card.late {
-  background-color: var(--late-color);
-}
-
-.task-card.due {
-  background-color: var(--due-color);
-}
-
-.task-card.early {
-  background-color: var(--early-color);
-}
-
-.task-card.unknown {
-  background-color: var(--unknown-color);
-}
-
-.task-card.due-over {
-  background-color: var(--due-over-color);
-}
-
-.task-card.checked {
-  background-color: gray;
-  animation-name: appear;
-  animation-duration: 1s;
-  animation-timing-function: ease-in;
-  animation-fill-mode: forwards;
-}
-
-.task-card.completed {
-  animation-name: completed-animation;
-  animation-duration: 1s;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
-}
-
-.task-card.deleted {
-  overflow: hidden;
-  animation-name: delete-animation;
-  animation-duration: 0.7s;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
-}
-
-
-/*
-.task-card.today > .task-body {
-  border-right: solid 10px;
-  border-bottom-right-radius: 10px;
-  border-color: rgb(80, 0, 0);
-}
-
-.task-card.today > div {
-  padding-left: 10px;
-}
-*/
-
-.task-card .edit {
-  background-color: rgba(255, 255, 255, 0.2);
-  padding: 10px;
-  margin-top: 10px;
-  width: max-content;
-}
-
-.task-header {
-  background-color: rgba(0, 0, 0, 0.2);
-  padding: 5px 10px 5px 10px;
-  border-radius: 10px 10px 0 0;
-  display: flex;
-  gap: 10px;
-}
-
-.task-time {
-  flex-grow: 1;
-  font-size: 0.8rem;
-  display: grid;
-  grid-template-columns: minmax(max-content, 1fr) minmax(max-content, 1fr) minmax(max-content, 1fr);
-}
-
-.time-box {
-  flex: 10;
-  display: flex;
-  justify-content: center;
-}
-
-.time-box.dl {
-  font-weight: bold;
-}
-
-.time-box:first-child > span {
-  margin-right: auto;
-}
-
-.time-box:last-child > span {
-  margin-left: auto;
-}
-
-.time-box > span {
-  display: flex;
-  align-items: center;
-  gap: 1ex;
-}
-
-.time-symbol {
-  font-size: 1.0rem;
-  margin: -0.3rem 0 -0.5rem 0;
-}
-
-.task-time.stacked {
-  grid-template-columns: auto;
-}
-
-
-/* @media screen and (max-width: 350px) {
-  .task-time {
-    flex-direction: column;
-  }
-  .time-symbol {
-    margin: -0.5rem 0 -0.4rem 0;
-  }
-} */
-
-
-.task-body {
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.task-menu {
-  cursor: pointer;
-  position: relative;
-  border-radius: 3px;
-}
-
-
-.task-menu:hover {
-  background-color: #ffffff22;
-}
-
-.task-menu.active {
-  background-color: #aaaaaa;
-  border-radius: 3px 3px 0 0;
-}
-
-.task-menu-content {
-  position: absolute;
-  z-index: 100;
-  right: 0;
-  width: max-content;
-  background-color: #aaaaaa;
-  border-radius: 2px 0 2px 2px;
-}
-
-.task-menu-content-item {
-  padding: 5px;
-  cursor: pointer;
-}
-
-.task-menu-content-item:hover {
-  background-color: #bbbbbb;
-}
-
-.list-card {
-  color: darkblue;
-  background-color: skyblue;
-  display: inline-block;
-  padding: 20px;
-  margin: 10px;
-}
-
-.list-card.shopping-l {
-  color: darkgreen;
-  background-color: lightgreen;
-}
-
-.list-card.new {
-  color: #aaa;
-  background-color: #ddd;
-  cursor: pointer;
-}
-
-.tasklist {
-  margin: 0 calc(max(50vw - 20em, 10px));
-}
-
-.today-separator {
-  height: 2px;
-  background-image: linear-gradient(90deg, #000 25%, #0000 25%, #0000 50%, #000 50%, #000 75%, #0000 75%, #0000 100%);
-  background-size: 19%;
-}
-
 label {
   display: block;
 }
 
-.time-interval-form {
-  display: inline-block;
-  width: max-content;
-  margin-right: 1em;
-}
-
-.time-interval-form input[type="number"] {
-  width: 80px;
-}
-
 @keyframes completed-animation {
   0% {
-    -webkit-transform:
-      perspective(5000px) rotateY(0deg);
+    -webkit-transform: perspective(5000px) rotateY(0deg);
     opacity: 1;
   }
 
   100% {
-    -webkit-transform:
-      perspective(5000px) rotateY(90deg);
+    -webkit-transform: perspective(5000px) rotateY(90deg);
     opacity: 0;
   }
 }
@@ -324,165 +60,12 @@ label {
 
 @keyframes appear {
   0% {
-    -webkit-transform:
-      perspective(5000px) rotateY(270deg);
+    -webkit-transform: perspective(5000px) rotateY(270deg);
     opacity: 0;
   }
 
   100% {
-    -webkit-transform:
-      perspective(5000px) rotateY(360deg);
+    -webkit-transform: perspective(5000px) rotateY(360deg);
     opacity: 1;
   }
 }
-
-.done-button {
-  margin-right: 0;
-  font-size: 2rem;
-  background-color: rgb(61, 165, 61);
-  border: #000 solid 1px;
-  border-radius: 10px;
-  padding: 2px 8px;
-  float: inline-end;
-  margin-left: 10px;
-  opacity: 0.9;
-  color: rgb(24, 36, 24);
-}
-
-.done-button:hover {
-  filter: brightness(0.8);
-}
-
-.done-button:active {
-  filter: brightness(0.7);
-}
-
-/* .done-button::after {
-  content: "✓";
-} */
-
-.done-button-wrapper {
-  display: block;
-  margin-top: auto;
-  z-index: 1;
-}
-
-.shopping-list-section {
-  display: block;
-  /* margin: 10px; */
-  padding: 2px 10px 10px 10px;
-}
-
-.shopping-list-section > h2 {
-  text-align: center;
-  margin: 0;
-  font-size: medium;
-  color: #0006;
-}
-
-.shopping-list-section .checked {
-  text-decoration: line-through;
-  color: #0006;
-  font-weight: normal;
-}
-
-.shopping-list-section ul {
-  list-style: none;
-  padding-left: 0;
-  margin-top: 0;
-}
-
-.shopping-list-section li {
-  cursor: pointer;
-  font-weight: 500;
-}
-
-.shopping-list-wrapper {
-  display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(min(100%,200px),auto));
-  gap: 10px;
-  margin: 0 10px;
-}
-
-.add-instance {
-  background-color: #aaa;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: calc(min(500px, 100vw - 90px));
-  padding: 5%;
-  line-height: 30px;
-}
-
-.add-instance-background {
-  cursor: auto;
-  background-color: #000a;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 101;
-}
-
-.add-section {
-  background-color: rgb(218, 218, 218);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 30px;
-  cursor: pointer;
-}
-
-.add-section:hover {
-  background-color: rgb(182, 182, 182);
-}
-
-.toast-container {
-  position: absolute;
-  right: 0;
-  z-index: 200;
-}
-
-.toast {
-  background-color: red;
-  margin: 5px;
-  padding: 5px;
-  border-radius: 5px;
-  width: 200px;
-}
-
-.toast.info {
-  background-color: blue;
-}
-
-/*
-button {
-  background: hsl(120, 100%, 20%);
-  color: white;
-  border: none;
-  padding: 10px;
-  font-size: 16px;
-  margin: 2px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  background: hsl(120, 100%, 30%);
-}
-
-button:active {
-  background: hsl(120, 100%, 30%);
-} */
-/*
-
-@media screen and (max-width: 600px) {
-  button {
-    font-size: larger;
-    margin-left: auto;
-    margin-right: 0px;
-    display: block;
-  }
-} */ 
