--- a/client/src/components/TasklistList.css
+++ b/client/src/components/TasklistList.css
@@ -1,5 +1,6 @@
 .list-card {
-  color: darkblue;
+  /* color: darkblue; */
+  color: black;
   background-color: skyblue;
   display: inline-block;
   padding: 20px;
@@ -7,6 +8,46 @@
 }
 
 .list-card.shopping-l {
-  color: darkgreen;
-  background-color: lightgreen;
+  background-color: lightgrey;
+  border: 2px solid black;
+  color: green;
+  padding: 18px;
+  /* color: darkgreen; */
+  /* background-color: lightgreen; */
+}
+
+.list-card.late {
+  background-color: rgb(241, 121, 121);
+}
+
+.list-card.due {
+  background-color: rgb(255, 189, 65);
+}
+
+.list-card.early {
+  background-color: rgb(90, 192, 90);
+}
+
+.list-card.today {
+  background-color: rgb(255, 224, 48);
+}
+
+.list-card.unknown.late {
+  background: linear-gradient(rgb(241, 121, 121) 50%, rgb(241, 96, 241));
+}
+
+.list-card.unknown.due {
+  background: linear-gradient(rgb(255, 189, 65) 50%, rgb(241, 96, 241));
+}
+
+.list-card.unknown.early {
+  background: linear-gradient(rgb(90, 192, 90) 50%, rgb(241, 96, 241));
+}
+
+.list-card.unknown.idle {
+  background: linear-gradient(skyblue 50%, rgb(241, 96, 241));
+}
+
+.list-card.unknown.today {
+  background: linear-gradient(rgb(255, 224, 48) 50%, rgb(241, 96, 241));
 }
