--- a/client/src/components/Toasts.css
+++ b/client/src/components/Toasts.css
@@ -5,7 +5,7 @@
 }
 
 .toast {
-  background-color: red;
+  background-color: rgb(230, 82, 82);
   margin: 5px;
   padding: 5px;
   border-radius: 5px;
@@ -13,5 +13,5 @@
 }
 
 .toast.info {
-  background-color: blue;
+  background-color: rgb(90, 90, 243);
 }
