--- a/client/src/components/ListOptionBar.css
+++ b/client/src/components/ListOptionBar.css
@@ -32,12 +32,13 @@
 
 .list-options-bar-show-button.activate {
   position: fixed;
-  bottom: 0px;
-  right: 0px;
+  bottom: 5px;
+  right: 5px;
   background-color: #aaa9;
   z-index: 2;
   padding: 5px;
-  border-radius: 10px 0 0 0;
+  border-radius: 30px;
+  /* border-radius: 10px 0 0 0; */
   width: 30px;
   height: 30px;
 }
