--- a/client/src/components/taskCard/ChildTask.css
+++ b/client/src/components/taskCard/ChildTask.css
@@ -11,7 +11,7 @@
   justify-content: space-between;
   align-items: center;
   border-radius: 5px;
-  font-size: 0.9rem;
+  /* font-size: 0.9rem; */
   font-weight: 300;
 }
 .child-task.idle {
@@ -47,4 +47,15 @@
   padding: 0px 6px;
   border-radius: 7px;
   margin: 4px;
+}
+
+.child-task-time-info {
+  color: #0006;
+  font-size: small;
+  font-weight: 300;
+  margin-right: auto;
+  margin-left: 5px;
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  column-gap: 8px;
 }
