--- a/client/src/pages/TasklistList/TasklistList.css
+++ b/client/src/pages/TasklistList/TasklistList.css
@@ -7,6 +7,10 @@
   margin: 10px;
 }
 
+.task-list-list a {
+  text-decoration: none2;
+}
+
 .list-card.shopping-l {
   background-color: lightgrey;
   border: 2px solid black;
@@ -50,4 +54,13 @@
 
 .list-card.unknown.today {
   background: linear-gradient(rgb(255, 224, 48) 50%, rgb(241, 96, 241));
+}
+
+@media only screen and (max-width: 500px) {
+  .list-card {
+    display: block;
+  }
+  .list-card::after {
+    content: " Luo uusi lista!";
+  }
 }
