--- a/client/src/components/Modal.css
+++ b/client/src/components/Modal.css
@@ -14,6 +14,7 @@
   max-height: 90vh;
   overflow-y: scroll;
   overflow-x: hidden;
+  user-select: none;
 }
 
 .add-instance-background {
@@ -43,9 +44,9 @@
   /* font-size: 0.5em; */
 }
 .form-corner-button:hover {
-  background-color: #520000;
+  color: #ff6c6c;
 }
 
 .form-corner-button:active {
-  color: #ff6c6c;
+  background-color: #520000;
 }
